RESOLVED FIXED113794
[GTK] WebKitWebNavigationAction: dispose and finalize mixed up
https://bugs.webkit.org/show_bug.cgi?id=113794
Summary [GTK] WebKitWebNavigationAction: dispose and finalize mixed up
Alban Crequy
Reported 2013-04-02 09:18:50 PDT
Created attachment 196158 [details] [PATCH] WebKitWebNavigationAction: fix mix between dispose and finalize WebKitWebNavigationAction's dispose function calls the parent's finalize function. It causes a segfault in some scenarios. I am testing the attached patch.
Attachments
[PATCH] WebKitWebNavigationAction: fix mix between dispose and finalize (1.07 KB, patch)
2013-04-02 09:18 PDT, Alban Crequy
gustavo: review-
[PATCH] [GTK] WebKitWebNavigationAction: fix mix between dispose and finalize (2.40 KB, patch)
2013-04-03 06:07 PDT, Alban Crequy
no flags
Alban Crequy
Comment 1 2013-04-03 01:37:16 PDT
The patch fixes the crash for me.
Gustavo Noronha (kov)
Comment 2 2013-04-03 05:40:59 PDT
Comment on attachment 196158 [details] [PATCH] WebKitWebNavigationAction: fix mix between dispose and finalize Patch looks good, you need a ChangeLog entry, though: http://www.webkit.org/coding/contributing.html
Alban Crequy
Comment 3 2013-04-03 06:07:53 PDT
Created attachment 196336 [details] [PATCH] [GTK] WebKitWebNavigationAction: fix mix between dispose and finalize patch updated with: - a changelog - changelog in the commit log too
Gustavo Noronha (kov)
Comment 4 2013-04-03 06:17:38 PDT
Comment on attachment 196336 [details] [PATCH] [GTK] WebKitWebNavigationAction: fix mix between dispose and finalize Good to go, I'll wait for EWS and set cq+
WebKit Review Bot
Comment 5 2013-04-03 08:16:33 PDT
Comment on attachment 196336 [details] [PATCH] [GTK] WebKitWebNavigationAction: fix mix between dispose and finalize Clearing flags on attachment: 196336 Committed r147557: <http://trac.webkit.org/changeset/147557>
WebKit Review Bot
Comment 6 2013-04-03 08:16:35 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.