[GTK] WebKitWebNavigationAction: fix mix between dispose and finalize https://bugs.webkit.org/show_bug.cgi?id=113794

Patch by Alban Crequy <alban.crequy@collabora.co.uk> on 2013-04-03
Reviewed by Gustavo Noronha Silva.

WebKitWebNavigationAction's dispose function was named finalize and was calling
the parent class's finalise function, causing a memory corruption. Change it to
be a proper finalize function instead.

* webkit/webkitwebnavigationaction.cpp:
(webkit_web_navigation_action_class_init):

Canonical link: https://commits.webkit.org/132225@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@147557 268f45cc-cd09-0410-ab3c-d52691b4dbfc