Source/WebKit/gtk/webkit/webkitwebnavigationaction.cpp
@@ -134,7 +134,7 @@ static void webkit_web_navigation_action_class_init(WebKitWebNavigationActionCla
 
     objectClass->get_property = webkit_web_navigation_action_get_property;
     objectClass->set_property = webkit_web_navigation_action_set_property;
-    objectClass->dispose = webkit_web_navigation_action_finalize;
+    objectClass->finalize = webkit_web_navigation_action_finalize;
 
     /**
      * WebKitWebNavigationAction:reason:
